# Pea_project_3

./: CMakeLists.txt  README.md
src/: main.cpp
src/GeneticAlgoritm/: GeneticAlgoritm.cpp  GeneticAlgoritm.hpp
